--- a/index.html
+++ b/index.html
@@ -136,6 +136,21 @@
 
 
 
+    <div class="form-group container-fluid">
+        <input type="text"
+          class="form-control" name="name" id="name" aria-describedby="helpId" placeholder="Name*">
+  
+        <input type="text"
+          class="form-control" name="price" id="price" aria-describedby="helpId" placeholder="Website">
+  
+        <input type="text"
+          class="form-control" name="color" id="color" aria-describedby="helpId" placeholder="Email">
+  
+        <input type="text"
+          class="form-control" name="department" id="department" aria-describedby="helpId" placeholder="Message*">
+          <button class="btn btn-info btn-lg">SUBMIT MESSAGE</button>
+      </div>
+
     <footer class="footer">
         <p>2020 © Copyrights Ideatech</p>
         <div class="footerSocials">
